fixed showcase wrap

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -42,6 +42,11 @@ img {
       height: 600px;
 }
 
+.flex-container-wrap {
+      flex-wrap: wrap;
+      justify-content: space-between;
+}
+
 .slider-box {
       
       position:absolute;
@@ -174,8 +179,8 @@ header {
 .showcase {
       text-align: center;
       border-left:1px solid #F0F0F0;
-      width: 33.33%;
       padding: 4rem 0 4rem 0;
+      min-width: 33%;
 }
 
 .carousel-item {
